fixed spacing between nodes

--- a/src/AlgoVisualizer/AlgoVisualizer.css
+++ b/src/AlgoVisualizer/AlgoVisualizer.css
@@ -19,15 +19,15 @@
 
 .content {
   background-color: #1f2833;
-  display: flex;
 }
 
 .grid {
   margin: 30px;
   padding: 20px;
   border-radius: 8px;
-  background-color: #c5c6c7;
   flex: 2;
+  background-color: #c5c6c7;
+  font-size: 0px;
 }
 
 .button-container {
