--- a/src/AlgoVisualizer/Node/Node.css
+++ b/src/AlgoVisualizer/Node/Node.css
@@ -3,6 +3,7 @@
   height: 15px;
   outline: 0px solid #1f2833;
   display: inline-block;
+  word-spacing: -1;
 }
 
 .node-finish {
@@ -32,7 +33,6 @@
 
 .node-wall {
   background-color: #191716;
-  margin-bottom: 0px;
 }
 
 .node-shortest-path {
